version/0.73/_sources/examples/gallery_examples/00-mapdl-examples/modal_beam.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/modal_beam.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_modal_beam.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_modal_beam.py:


.. _ref_modal_beam:

=================================
MAPDL modal beam analysis example
=================================

This example demonstrates how to perform a simple modal analysis
and animate its results.


Objective
~~~~~~~~~
This example models a simple 3D elastic beam made of BEAM188 elements.
These beams elements are made of a linear elastic material similar to steel,
and have a rectangular section.


Procedure
~~~~~~~~~

* Launch MAPDL instance
* Material properties
* Geometry
* Finite element model
* Boundary conditions
* Solving the model
* Post-processing
* Stop MAPDL

.. GENERATED FROM PYTHON SOURCE LINES 56-60

Launch MAPDL instance
=====================

Launch MAPDL with interactive plotting

.. GENERATED FROM PYTHON SOURCE LINES 60-68

.. code-block:: Python

    from ansys.mapdl.core import launch_mapdl

    nmodes = 10
    # start MAPDL
    mapdl = launch_mapdl()
    print(mapdl)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Mapdl
    -----
    PyMAPDL Version:     0.73.2
    Interface:           grpc
    Product:             Ansys Mechanical Enterprise
    MAPDL Version:       25.2
    Running on:          localhost
                         (127.0.0.1)




.. GENERATED FROM PYTHON SOURCE LINES 69-73

Define material
===============

Define material

.. GENERATED FROM PYTHON SOURCE LINES 73-78

.. code-block:: Python

    mapdl.prep7()
    mapdl.mp("EX", 1, 2.1e11)
    mapdl.mp("PRXY", 1, 0.3)
    mapdl.mp("DENS", 1, 7800)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    MATERIAL          1     DENS =   7800.000



.. GENERATED FROM PYTHON SOURCE LINES 79-83

Create geometry
===============

Create keypoints and line

.. GENERATED FROM PYTHON SOURCE LINES 83-88

.. code-block:: Python

    mapdl.k(1)
    mapdl.k(2, 10)
    mapdl.l(1, 2)
    mapdl.lplot()




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_001.png
   :alt: modal beam
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-93

Define finite element model
===========================

Define element type/section type - Rectangular beam section.

.. GENERATED FROM PYTHON SOURCE LINES 93-106

.. code-block:: Python

    mapdl.et(1, "BEAM188")
    mapdl.sectype(1, "BEAM", "RECT")
    mapdl.secoffset("CENT")
    mapdl.secdata(2, 1)

    # Mesh the line
    mapdl.type(1)
    mapdl.esize(1)
    mapdl.lesize("ALL")
    mapdl.lmesh("ALL")
    mapdl.eplot()
    mapdl.finish()




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_002.png
   :alt: modal beam
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ***** ROUTINE COMPLETED *****  CP =         0.000



.. GENERATED FROM PYTHON SOURCE LINES 107-111

Specify boundary conditions
===========================

Fully fixed (clamped) end.

.. GENERATED FROM PYTHON SOURCE LINES 111-117

.. code-block:: Python

    mapdl.solution()  # Entering the solution processor.
    mapdl.nsel("S", "LOC", "X", "0")
    mapdl.d("ALL", "ALL")
    mapdl.allsel()
    mapdl.nplot(plot_bc=True, nnum=True)




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_003.png
   :alt: modal beam
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 118-122

Solve the model
===============

Setting modal analysis

.. GENERATED FROM PYTHON SOURCE LINES 122-127

.. code-block:: Python

    mapdl.antype("MODAL")
    mapdl.modopt("LANB", nmodes, 0, 200)
    mapdl.solve()
    mapdl.finish()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    FINISH SOLUTION PROCESSING


     ***** ROUTINE COMPLETED *****  CP =         0.000



.. GENERATED FROM PYTHON SOURCE LINES 128-132

Postprocess
===========

Enter the post processor (post1)

.. GENERATED FROM PYTHON SOURCE LINES 132-138

.. code-block:: Python

    mapdl.post1()
    output = mapdl.set("LIST")
    print(output)

    result = mapdl.result





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    *****  INDEX OF DATA SETS ON RESULTS FILE  *****

         SET   TIME/FREQ    LOAD STEP   SUBSTEP  CUMULATIVE
           1  8.3233851             1         1         1                  
           2  16.274527             1         2         2                  
           3  50.891463             1         3         3                  
           4  60.248510             1         4         4                  
           5  89.208488             1         5         5                  
           6  129.85203             1         6         6                  
           7  138.63765             1         7         7                  
           8  182.23482             1         8         8




.. GENERATED FROM PYTHON SOURCE LINES 139-140

Animate results

.. GENERATED FROM PYTHON SOURCE LINES 140-163

.. code-block:: Python


    mode2plot = 2
    normalizeDisplacement = 1 / result.nodal_displacement(mode2plot - 1)[1].max()

    result.plot_nodal_displacement(
        mode2plot,
        show_displacement=True,
        displacement_factor=normalizeDisplacement,
        n_colors=10,
    )

    result.animate_nodal_displacement(
        mode2plot,
        loop=False,
        add_text=False,
        n_frames=100,
        displacement_factor=normalizeDisplacement,
        show_axes=False,
        background="w",
        movie_filename="animation.gif",
        off_screen=True,
    )




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_004.png
          :alt: modal beam
          :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_004.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_005.gif
          :alt: modal beam
          :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_modal_beam_005.gif
          :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Rendering animation:   0%|          | 0/100 [00:00<?, ?it/s]    Rendering animation:   2%|▏         | 2/100 [00:00<00:06, 14.69it/s]    Rendering animation:   5%|▌         | 5/100 [00:00<00:04, 20.22it/s]    Rendering animation:   8%|▊         | 8/100 [00:00<00:04, 22.19it/s]    Rendering animation:  11%|█         | 11/100 [00:00<00:03, 23.15it/s]    Rendering animation:  14%|█▍        | 14/100 [00:00<00:03, 23.66it/s]    Rendering animation:  17%|█▋        | 17/100 [00:00<00:03, 23.98it/s]    Rendering animation:  20%|██        | 20/100 [00:00<00:03, 23.82it/s]    Rendering animation:  23%|██▎       | 23/100 [00:00<00:03, 23.85it/s]    Rendering animation:  26%|██▌       | 26/100 [00:01<00:03, 23.47it/s]    Rendering animation:  29%|██▉       | 29/100 [00:01<00:03, 23.30it/s]    Rendering animation:  32%|███▏      | 32/100 [00:01<00:02, 23.31it/s]    Rendering animation:  35%|███▌      | 35/100 [00:01<00:02, 23.13it/s]    Rendering animation:  38%|███▊      | 38/100 [00:01<00:02, 23.04it/s]    Rendering animation:  41%|████      | 41/100 [00:01<00:02, 23.01it/s]    Rendering animation:  44%|████▍     | 44/100 [00:01<00:02, 23.08it/s]    Rendering animation:  47%|████▋     | 47/100 [00:02<00:02, 23.01it/s]    Rendering animation:  50%|█████     | 50/100 [00:02<00:02, 22.95it/s]    Rendering animation:  53%|█████▎    | 53/100 [00:02<00:02, 22.84it/s]    Rendering animation:  56%|█████▌    | 56/100 [00:02<00:01, 22.71it/s]    Rendering animation:  59%|█████▉    | 59/100 [00:02<00:01, 22.58it/s]    Rendering animation:  62%|██████▏   | 62/100 [00:02<00:01, 22.43it/s]    Rendering animation:  65%|██████▌   | 65/100 [00:02<00:01, 22.44it/s]    Rendering animation:  68%|██████▊   | 68/100 [00:02<00:01, 22.36it/s]    Rendering animation:  71%|███████   | 71/100 [00:03<00:01, 22.33it/s]    Rendering animation:  74%|███████▍  | 74/100 [00:03<00:01, 22.43it/s]    Rendering animation:  77%|███████▋  | 77/100 [00:03<00:01, 22.47it/s]    Rendering animation:  80%|████████  | 80/100 [00:03<00:00, 22.63it/s]    Rendering animation:  83%|████████▎ | 83/100 [00:03<00:00, 22.59it/s]    Rendering animation:  86%|████████▌ | 86/100 [00:03<00:00, 22.68it/s]    Rendering animation:  89%|████████▉ | 89/100 [00:03<00:00, 22.75it/s]    Rendering animation:  92%|█████████▏| 92/100 [00:04<00:00, 22.75it/s]    Rendering animation:  95%|█████████▌| 95/100 [00:04<00:00, 22.69it/s]    Rendering animation:  98%|█████████▊| 98/100 [00:04<00:00, 22.57it/s]    Rendering animation: 100%|██████████| 100/100 [00:09<00:00, 10.13it/s]


.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><style>/* PyVista HTML repr stylesheet.
     * Uses pv- prefix to avoid conflicts with other libraries.
     */

    :root {
      --pv-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --pv-border-color: var(--jp-border-color2, #e0e0e0);
      --pv-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --pv-background-color-row-even: var(--jp-layout-color1, #f5f5f5);
      --pv-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
      --pv-badge-active: #1b5e20;
      --pv-badge-normals: #0d47a1;
      --pv-badge-vectors: #00695c;
      --pv-badge-tcoords: #4527a0;
    }

    body[data-jp-theme-light="false"] {
      --pv-font-color0: var(--jp-content-font-color0, rgba(255, 255, 255, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(255, 255, 255, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(255, 255, 255, 0.38));
      --pv-border-color: var(--jp-border-color2, #424242);
      --pv-disabled-color: var(--jp-layout-color3, #616161);
      --pv-background-color-row-even: var(--jp-layout-color1, #1a1a1a);
      --pv-background-color-row-odd: var(--jp-layout-color2, #252525);
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    html[theme="dark"],
    html[data-theme="dark"],
    body[data-theme="dark"],
    body.vscode-dark {
      --pv-font-color0: rgba(255, 255, 255, 1);
      --pv-font-color2: rgba(255, 255, 255, 0.54);
      --pv-font-color3: rgba(255, 255, 255, 0.38);
      --pv-border-color: #424242;
      --pv-disabled-color: #616161;
      --pv-background-color-row-even: #1a1a1a;
      --pv-background-color-row-odd: #252525;
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    /* OS-level dark mode fallback: applies when no explicit data-theme is set */
    @media (prefers-color-scheme: dark) {
      html:not([data-theme="light"]) {
        --pv-font-color0: rgba(255, 255, 255, 1);
        --pv-font-color2: rgba(255, 255, 255, 0.54);
        --pv-font-color3: rgba(255, 255, 255, 0.38);
        --pv-border-color: #424242;
        --pv-disabled-color: #616161;
        --pv-background-color-row-even: #1a1a1a;
        --pv-background-color-row-odd: #252525;
        --pv-badge-active: #66bb6a;
        --pv-badge-normals: #64b5f6;
        --pv-badge-vectors: #4db6ac;
        --pv-badge-tcoords: #b39ddb;
      }
    }

    .pv-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
      line-height: 1.6;
      padding-bottom: 4px;
      font-family: var(--jp-ui-font-family, sans-serif);
      font-size: var(--jp-ui-font-size1, 13px);
      color: var(--pv-font-color0);
    }

    .pv-text-repr-fallback {
      display: none;
    }

    /* Header */
    .pv-header {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 6px;
      padding-bottom: 6px;
      border-bottom: solid 1px var(--pv-border-color);
      margin-bottom: 4px;
    }

    .pv-header-text {
      display: flex;
      flex-direction: column;
      gap: 1px;
      min-width: 0;
      flex: 1;
    }

    .pv-obj-type {
      font-weight: 600;
      color: var(--pv-font-color0);
    }

    .pv-header-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 2px 7px;
      border-radius: 3px;
      color: var(--pv-font-color2);
      border: 1px solid var(--pv-border-color);
      white-space: nowrap;
    }

    /* Metadata (always-visible key-value rows) */
    .pv-metadata {
      margin: 4px 0 6px 0;
      font-size: 0.92em;
      line-height: 1.5;
    }

    .pv-meta-row {
      display: flex;
      flex-wrap: wrap;
      gap: 1px 14px;
      padding: 1px 0;
    }

    .pv-meta-row-label {
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
      min-width: 60px;
    }

    .pv-meta-entry {
      white-space: nowrap;
    }

    /* Copy-to-clipboard button */
    .pv-copy-btn {
      display: inline-block;
      cursor: pointer;
      opacity: 0.5;
      font-size: 0.85em;
      padding: 0 3px;
      vertical-align: middle;
      transition: opacity 0.15s;
      user-select: none;
      border: none;
      background: none;
      color: var(--pv-font-color3);
    }

    .pv-copy-btn:hover {
      opacity: 1;
      color: var(--pv-font-color0);
    }

    .pv-meta-label {
      color: var(--pv-font-color3);
      font-weight: 400;
      padding-right: 2px;
    }

    /* Sections grid */
    .pv-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto auto 1fr 20px 20px;
      margin-block-start: 0;
      margin-block-end: 0;
      list-style: none;
    }

    .pv-section-item {
      display: contents;
    }

    /* Hidden checkbox for expand/collapse */
    .pv-section-item > input {
      display: block;
      opacity: 0;
      height: 0;
      margin: 0;
    }

    .pv-section-item > input + label {
      color: var(--pv-disabled-color);
    }

    .pv-section-item > input:enabled + label {
      cursor: pointer;
      color: var(--pv-font-color2);
    }

    .pv-section-item > input:enabled + label:hover {
      color: var(--pv-font-color0);
    }

    /* Section summary (left column label) */
    .pv-section-summary {
      grid-column: 1;
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
    }

    .pv-section-summary > span {
      display: inline-block;
      padding-left: 0.3em;
    }

    .pv-section-summary-in:disabled + label {
      color: var(--pv-font-color2);
    }

    /* Expand/collapse arrows */
    .pv-section-summary-in + label:before {
      display: inline-block;
      content: "\25b6";
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .pv-section-summary-in:disabled + label:before {
      color: var(--pv-disabled-color);
    }

    .pv-section-summary-in:checked + label:before {
      content: "\25bc";
    }

    .pv-section-summary-in:checked + label > span {
      display: none;
    }

    .pv-section-summary,
    .pv-section-inline-details {
      padding-top: 4px;
    }

    .pv-section-inline-details {
      grid-column: 2 / -1;
    }

    .pv-section-details {
      grid-column: 1 / -1;
      margin-top: 4px;
      margin-bottom: 5px;
    }

    .pv-section-summary-in ~ .pv-section-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-inline-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-details {
      display: block;
    }

    .pv-section-summary-in:checked ~ .pv-section-details:has(.pv-var-list) {
      display: contents;
    }

    /* Variable (array) list */
    .pv-var-list,
    .pv-var-item {
      display: contents;
    }

    .pv-var-item > div,
    .pv-var-item label,
    .pv-var-item > .pv-var-name span {
      background-color: var(--pv-background-color-row-even);
      border-color: var(--pv-background-color-row-odd);
      margin-bottom: 0;
      padding-top: 2px;
    }

    .pv-var-list > li:nth-child(odd) > div,
    .pv-var-list > li:nth-child(odd) > label,
    .pv-var-list > li:nth-child(odd) > .pv-var-name span {
      background-color: var(--pv-background-color-row-odd);
      border-color: var(--pv-background-color-row-even);
    }

    .pv-var-name {
      grid-column: 1;
    }

    .pv-var-dims {
      grid-column: 2;
    }

    .pv-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--pv-font-color2);
    }

    .pv-var-range {
      grid-column: 4;
      color: var(--pv-font-color3);
      font-size: 0.92em;
    }

    .pv-var-badges {
      grid-column: 5;
      padding-left: 8px;
    }

    .pv-var-name,
    .pv-var-dims,
    .pv-var-dtype,
    .pv-var-range {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .pv-var-name:hover,
    .pv-var-dims:hover,
    .pv-var-dtype:hover,
    .pv-var-range:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .pv-var-name span {
      padding-left: 25px !important;
    }

    .pv-var-name-active span {
      font-weight: 600;
    }

    /* Badges */
    .pv-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 1px 5px;
      border-radius: 3px;
      vertical-align: middle;
      line-height: 1.4;
    }

    .pv-badge-active {
      color: var(--pv-badge-active);
      border: 1px solid var(--pv-badge-active);
    }

    .pv-badge-normals {
      color: var(--pv-badge-normals);
      border: 1px solid var(--pv-badge-normals);
    }

    .pv-badge-vectors {
      color: var(--pv-badge-vectors);
      border: 1px solid var(--pv-badge-vectors);
    }

    .pv-badge-tcoords {
      color: var(--pv-badge-tcoords);
      border: 1px solid var(--pv-badge-tcoords);
    }

    /* Logo and Icons */
    .pv-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-logo svg {
      width: 28px;
      height: 28px;
    }

    .pv-brand-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-brand-logo svg {
      height: 20px;
      width: auto;
    }

    /* Children list (MultiBlock / PartitionedDataSet) */
    .pv-children-list {
      padding-left: 25px !important;
      list-style: none;
    }

    .pv-children-list li {
      padding: 1px 0;
    }

    .pv-child-name {
      font-weight: 500;
    }

    .pv-child-type {
      color: var(--pv-font-color2);
      font-style: italic;
    }

    .pv-child-type:before {
      content: "\00b7";
      padding: 0 6px;
      font-style: normal;
    }

    .pv-child-detail {
      color: var(--pv-font-color3);
      font-size: 0.9em;
    }

    .pv-child-detail:not(:empty):before {
      content: "\00b7";
      padding: 0 6px;
    }
    </style><pre class='pv-text-repr-fallback'>CameraPosition(position=(16.153550716504107, 11.153550716504107, 11.153550716504107),
                   focal_point=(5.0, 0.0, 0.0),
                   viewup=(0.0, 0.0, 1.0))</pre><div class='pv-wrap' style='display:none'><div class='pv-header'><div class='pv-header-text'><div class='pv-obj-type'>CameraPosition<button class='pv-copy-btn' title='Copy to clipboard' data-copy='[(16.153550716504107, 11.153550716504107, 11.153550716504107), (5.0, 0.0, 0.0), (0.0, 0.0, 1.0)]' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div></div></div><div class='pv-metadata'><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>position</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(16.1536, 11.1536, 11.1536)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (16.1536, 11.1536, 11.1536)</span></div><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>focal_point</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(5.0000, 0.0000, 0.0000)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (5.0000, 0.0000, 0.0000)</span></div><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>viewup</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(0.0000, 0.0000, 1.0000)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'></span> (0.0000, 0.0000, 1.0000)</span></div></div></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 164-167

Stop MAPDL
==========


.. GENERATED FROM PYTHON SOURCE LINES 167-169

.. code-block:: Python

    mapdl.finish()
    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 11.356 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_modal_beam.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: modal_beam.ipynb <modal_beam.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: modal_beam.py <modal_beam.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: modal_beam.zip <modal_beam.zip>`
